--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 <!-- Logo -->
 
 <body>
+  
   <header>
-    <img src="img/logo.svg" alt="">
+    <img class="logo" src="img/logo.svg" alt="">
   </header>
+  
 
   <main>
 
 <!-- titolo pagina -->
 
-    <section>
-      <h1><strong>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</strong></h1>
-      <span>Scritto da The Booleaner</span>
+    <section class="title">
+      <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+      <span>Scritto da <strong>The Booleaner</strong></span>
       <br>il 10/10/2020
+      <br>&nbsp;
     </section>
 
 <!-- immagini tim -->
@@ -40,7 +43,7 @@
 
 <!-- Blocco testo -->
 <div>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt unde exercitationem cupiditate recusandae quia similique accusantium, earum totam est assumenda quisquam eos a commodi, nulla ratione eaque tempora reiciendis blanditiis hic error? Quaerat sunt, hic ut magnam modi, cum exercitationem, nulla voluptatem voluptatibus dolorem harum atque. Accusamus itaque dicta hic quos rem ratione maxime, animi dolores dolorum voluptatibus molestias tenetur modi facilis consectetur saepe perspiciatis fugit, excepturi omnis amet! Officiis voluptates culpa accusantium illum neque eius, amet explicabo dolores libero voluptate qui a nulla. Totam expedita accusantium harum neque at sit nisi necessitatibus provident amet quisquam rerum in deleniti dolorem ratione dolorum, enim reprehenderit, illo adipisci debitis eius veritatis doloremque doloribus dicta soluta. Quae porro id laudantium dolorem dolore et numquam culpa minus eum, aperiam officia, mollitia sed unde nam saepe modi odio voluptatem omnis incidunt iusto? Voluptatum officia molestias laborum quia unde omnis suscipit neque quisquam mollitia delectus optio ducimus veniam reiciendis hic, consectetur beatae, nisi alias ipsam enim sint! Earum exercitationem accusamus eius, non assumenda magni ducimus cumque, molestiae deleniti consectetur possimus numquam dignissimos, perspiciatis alias voluptatem perferendis! Harum doloremque laudantium ab molestias iure omnis eum eaque aperiam, quasi natus ea recusandae, deserunt ipsa temporibus eius hic porro?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt unde exercitationem cupiditate recusandae quia similique accusantium, earum totam est assumenda quisquam eos a commodi, nulla ratione eaque tempora reiciendis blanditiis hic error? Quaerat sunt, hic ut magnam modi, cum exercitationem, nulla voluptatem voluptatibus dolorem harum atque. Accusamus itaque dicta hic quos rem ratione maxime, animi dolores dolorum voluptatibus molestias tenetur modi facilis consectetur saepe perspiciatis fugit, excepturi omnis amet! Officiis voluptates culpa accusantium illum neque eius, amet explicabo dolores libero voluptate qui a nulla. <span class="evidenziato">Totam expedita accusantium harum neque at sit nisi necessitatibus provident amet quisquam rerum in deleniti dolorem ratione dolorum, enim reprehenderit, illo adipisci debitis eius veritatis doloremque doloribus dicta soluta.Quae porro id laudantium dolorem dolore et numquam culpa minus eum, aperiam officia,</span> mollitia sed unde nam saepe modi odio voluptatem omnis incidunt iusto? Voluptatum officia molestias laborum quia unde omnis suscipit neque quisquam mollitia delectus optio ducimus veniam reiciendis hic, consectetur beatae, nisi alias ipsam enim sint! Earum exercitationem accusamus eius, non assumenda magni ducimus cumque, molestiae deleniti consectetur possimus numquam dignissimos, perspiciatis alias voluptatem perferendis! Harum doloremque laudantium ab molestias iure omnis eum eaque aperiam, quasi natus ea recusandae, deserunt ipsa temporibus eius hic porro?
 </div>
 
 <!-- Breve lista -->
@@ -77,7 +80,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt unde exercitat
 
 <br>&nbsp;
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore saepe obcaecati quos expedita soluta amet unde eveniet non sit ipsam alias natus error minus accusantium magni a nobis explicabo rem architecto quia possimus, maiores ullam ipsum doloremque. Repellat expedita rem perferendis iure. Nam et, dolore accusantium ipsam sed unde temporibus.
+<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore saepe obcaecati quos expedita soluta amet unde eveniet non sit ipsam alias natus error minus accusantium magni a nobis explicabo rem architecto quia possimus, maiores ullam ipsum doloremque. Repellat expedita rem perferendis iure. Nam et, dolore accusantium ipsam sed unde temporibus.</span>
 
 <br>&nbsp;
 
@@ -87,8 +90,15 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore saepe obcaecati 
 
     <div>
       <h3>Potrebbero Interessarti</h3>
-    <div>Lorem, ipsum dolor.</div>
-    <div>Lorem, ipsum dolor.</div>
+    
+      <div class="box-image1">
+        Lorem, ipsum dolor.
+      </div>
+      <br>&nbsp;
+      <div class="box-image2">
+        Lorem, ipsum dolor.
+      </div>
+    
     </div>
 
   </footer>
