3 inseriti diversi tratti css

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt unde exercitat
     <th>Lorem ipsum dolor</th>
   </tr>
 <tr>
-  <td>Lorem ipsum dolor</td>
-  <td>Lorem ipsum dolor</td>
-  <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis assumenda nemo esse eligendi! Laborum, culpa excepturi velit tenetur architecto possimus asperiores accusantium iste veritatis repellendus eveniet magni ea dolorem sed?</td>
+  <td class="tabblu">Lorem ipsum dolor</td>
+  <td class="tabblu">Lorem ipsum dolor</td>
+  <td class="tabblu">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis assumenda nemo esse eligendi! Laborum, culpa excepturi velit tenetur architecto possimus asperiores accusantium iste veritatis repellendus eveniet magni ea dolorem sed?</td>
 </tr>
 <tr>
   <td>Lorem ipsum dolor</td>
@@ -72,15 +72,17 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt unde exercitat
   <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis assumenda nemo esse eligendi! Laborum, culpa excepturi velit tenetur architecto possimus asperiores accusantium iste veritatis repellendus eveniet magni ea dolorem sed?</td>
 </tr>
 <tr>
-  <td>Lorem ipsum dolor</td>
-  <td>Lorem ipsum dolor</td>
-  <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis assumenda nemo esse eligendi! Laborum, culpa excepturi velit tenetur architecto possimus asperiores accusantium iste veritatis repellendus eveniet magni ea dolorem sed?</td>
+  <td class="tabblu">Lorem ipsum dolor</td>
+  <td class="tabblu">Lorem ipsum dolor</td>
+  <td class="tabblu">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis assumenda nemo esse eligendi! Laborum, culpa excepturi velit tenetur architecto possimus asperiores accusantium iste veritatis repellendus eveniet magni ea dolorem sed?</td>
 </tr>
 </table>
 
 <br>&nbsp;
 
-<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore saepe obcaecati quos expedita soluta amet unde eveniet non sit ipsam alias natus error minus accusantium magni a nobis explicabo rem architecto quia possimus, maiores ullam ipsum doloremque. Repellat expedita rem perferendis iure. Nam et, dolore accusantium ipsam sed unde temporibus.</span>
+<div>
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas iusto animi a nesciunt, saepe deserunt quae, accusamus incidunt ipsam aliquam sequi est debitis? Animi et veritatis accusantium recusandae atque sint. Officia dolor perspiciatis ipsa eius provident. Saepe pariatur a odit soluta, error minima laboriosam tempore temporibus sed necessitatibus harum dignissimos corrupti maxime dolorum, rerum qui, earum doloremque. Aspernatur, explicabo consequuntur. Voluptas accusantium molestiae, doloremque dolor quas aperiam tenetur! Velit eius ipsa possimus harum odio omnis eaque impedit mollitia quis, repellendus non quod, aliquid cupiditate laboriosam beatae praesentium totam. Laborum sunt, tempora ducimus cumque provident rem odit assumenda ad impedit amet suscipit corrupti perspiciatis, aliquid illum nulla magni earum quibusdam, quasi eveniet? <span class="evidenziato2">Dolorum, ducimus laudantium exercitationem, similique repudiandae corrupti deserunt ullam id commodi explicabo unde quidem vitae! Incidunt reiciendis aperiam sequi voluptas quasi ex molestias. Perspiciatis obcaecati vel dolorem! Numquam, placeat neque. Eligendi suscipit, earum eaque laudantium quos iste quisquam quasi dignissimos aliquid impedit temporibus molestiae ipsam placeat maiores commodi soluta quia accusantium sint doloremque! Laboriosam commodi doloremque aut labore sapiente deleniti ipsum fuga est modi.</span> Ad amet, nihil omnis ipsum sint voluptas dolorem eligendi pariatur officia delectus iure tenetur qui necessitatibus ducimus ut in excepturi quod repellendus autem dolore a earum laborum? Atque laboriosam dignissimos iure aliquam voluptatibus delectus minus odit omnis corporis. Repellat, maxime? Consequatur dicta amet incidunt deleniti doloribus blanditiis qui aut magni, eligendi, illum voluptatibus nesciunt dolor, iste animi exercitationem. Quaerat rem optio doloremque nemo nostrum quod dolore ex expedita libero praesentium earum dignissimos error quos cum veritatis deleniti deserunt aut, dolores perspiciatis vero asperiores rerum consectetur? Impedit error optio nesciunt in doloribus repellendus voluptas, ut incidunt itaque, dolorem modi earum et accusantium culpa expedita molestias laborum aperiam mollitia sit. Laudantium iste ipsa dolorum autem laboriosam minus commodi optio nemo impedit? Iusto a unde voluptates vel in.
+</div>
 
 <br>&nbsp;
 
@@ -92,11 +94,11 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt unde exercitat
       <h3>Potrebbero Interessarti</h3>
     
       <div class="box-image1">
-        Lorem, ipsum dolor.
+        <span class="bianco1">Lorem, ipsum dolor.</span>
       </div>
       <br>&nbsp;
       <div class="box-image2">
-        Lorem, ipsum dolor.
+        <span class="bianco1">Lorem, ipsum dolor.</span>
       </div>
     
     </div>
